Fixed overlapping buttons and headings

--- a/app/assets/stylesheets/_layout.styl
+++ b/app/assets/stylesheets/_layout.styl
@@ -68,6 +68,14 @@ footer
   +above(desktop)
     padding 15px 0
 
+  +below(tablet)
+    display flex
+    flex-direction column
+    .controls > button
+      font-size 14px
+    a
+      position relative
+
 
 
 section
